upload new answer

--- a/Practical_Machine_Learning/Practical_Machine_Learning.Rmd
+++ b/Practical_Machine_Learning/Practical_Machine_Learning.Rmd
@@ -3,6 +3,7 @@ title: "Practical Machine Learning Assignment"
 author: "Chuwei Zhong"
 date: "10/9/2019"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
 ---
